<resources>
	<string name="app_name">KaoDori</string>

	<string name="mm_setting_titol">設定</string>

	<string name="mm_phot">撮影設定</string>
	<string name="mm_phot_sub_main">サブカメラに切り替え</string>
	<string name="sub_camera">サブカメラ</string>
	<string name="main_camera">メインカメラ</string>
	<string name="mm_phot_array_size">解像度</string>
	<string name="mm_phot_flash">オートフラッシュ</string>
	<string name="mm_phot_rumbling">シャッター音</string>
	<string name="mm_effect_preview_tv">高速プレビュ－</string>
	<string name="mm_effect_preview_sufece">省電力プレビュ－</string>

	<string name="mm_effect">エフェクト</string>
	<string name="mm_effect_face_recgnition">検出</string>
	<string name="mm_effect_in_process">実行中</string>
	<string name="mm_effect_under_suspension">停止中</string>
	<string name="mm_effect_overlap_rejection">重複棄却</string>
	<string name="mm_effect_chase_focus">追跡フォーカス</string>

	<string name="mm_onoff_only">(On/Off項目)</string>
	<string name="mm_detector_select">検出対象選択</string>
	<string name="mm_detector_root">検出対象</string>
	<string name="mm_detector_frontal_face_alt">顔検出(標準)</string>
	<string name="mm_detector_frontalcatface">正面のみ？</string>
	<string name="mm_detector_frontalcatface_extended">正面(拡張)？</string>
	<string name="mm_detector_frontalface_alt2">正面顔全体2？</string>
	<string name="mm_detector_frontalface_default">正面デフォルト</string>
	<string name="mm_detector_fullbody">全身</string>
	<string name="mm_detector_upperbody">上半身</string>
	<string name="mm_detector_lowerbody">下半身</string>
	<string name="mm_detector_profileface">横顔</string>
	<string name="mm_detector_smile">笑顔</string>
	<string name="mm_detector_russian_plate_number">ナンバープレート・ロシア</string>
	<string name="mm_detector_ricence_plate_rus_16stages">ナンバープレートRUS</string>
	<string name="mm_detector_detaile">詳細検出</string>
	<string name="mm_detector_eye">目(標準)</string>
	<string name="mm_detector_righteye_2splits">右目</string>
	<string name="mm_detector_lefteye_2splits">左目</string>
	<string name="mm_detector_eyeglasses">眼鏡</string>
	<string name="mm_detector_frontalface_alt_tree">鼻(正面)？</string>

	<string name="mm_ohter">その他</string>

	<string name="mm_mode_still">静止画</string>
	<string name="mm_mode_move">動画</string>
	<string name="mm_mode_preview_save">プレビュー保存</string>

	<!--<string name="write_folder_key"/>-->
	<string name="write_folder">書込みフォルダ</string>
	<string name="up_scale">保存時の枠拡大倍数(検出枠から)</string>
	<string name="haarcascades_last_modified">最新の顔認証プロファイル</string>

	<string name="mm_video">動画設定</string>
	<string name="mm_video_rencoding_bit_rate">ビットレート</string>
	<string name="mm_video_frame_rate">フレームレート</string>

	<string name="audio_source">音声入力</string>
	<string name="audio_source_defalt">DEFAULT</string>
	<string name="audio_source_mic">MIC</string>
	<string name="audio_source_voice_uplink">VOICE_UPLINK</string>
	<string name="audio_source_voice_downlink">VOICE_DOWNLINK</string>
	<string name="audio_source_voice_call">VOICE_CALL</string>
	<string name="audio_source_voice_cancorder">CAMCORDER</string>
	<string name="audio_source_voice_recongnition">VOICE_RECOGNITION</string>
	<string name="audio_source_voice_comunication">VOICE_COMMUNICATION</string>
	<string name="audio_source_remote_submix">REMOTE_SUBMIX</string>
	<string name="audio_source_unprocessed">UNPROCESSED</string>

	<string name="video_source">データの取得元</string>
	<string name="video_source_defalt">DEFAULT</string>
	<string name="video_source_camera">カメラ</string>
	<string name="video_source_surface">プレビュー画面</string>

	<string name="video_output_format">出力フォーマット</string>
	<string name="video_output_format_default">DEFAULT</string>
	<string name="video_output_format_three_gpp">3GPP</string>
	<string name="video_output_format_mpeg_4">MPEG_4</string>
	<string name="video_output_format_amr_nb">AMR_NB</string>
	<string name="video_output_format_amr_wb">AMR_WB</string>
	<string name="video_output_format_aac_adts">AAC_ADTS</string>
	<string name="video_output_format_mpeg_2_ts">MPEG_2_TS</string>
	<string name="video_output_format_webm">WEBM</string>

	<string name="video_videdo_encorde">ビデオエンコーダ</string>
	<string name="video_videdo_encorde_default">DEFAULT</string>
	<string name="video_videdo_encorde_h263">H263</string>
	<string name="video_videdo_encorde_h264">H264</string>
	<string name="video_videdo_encorde_mpeg_4_sp">MPEG_4_SP</string>
	<string name="video_videdo_encorde_vp8">VP8</string>
	<string name="video_videdo_encorde_hevc">HEVC</string>

	<string name="video_audio_encorde">オーディオエンコーダ</string>
	<string name="video_audio_encorde_default">DEFAULT</string>
	<string name="video_audio_encorde_arm_nb">AMR_NB</string>
	<string name="video_audio_encorde_arm_wb">AMR_WB</string>
	<string name="video_audio_encorde_aac">AAC</string>
	<string name="video_audio_encorde_he_aac">HE_AAC</string>
	<string name="video_audio_encorde_aac_eld">AAC_ELD</string>
	<string name="video_audio_encorde_vorbis">VORBIS</string>

	<!--<item>-->
			<string name="mm_quit_titol">終了</string>
		<!--</item>-->
	<!--</string-array>-->

	<string name="googlc2">Google推奨Camera2</string>
	<string name="c1surfas">Camera1</string>
	<string name="c2sarfece">Camera2Sarfec</string>



	<string name="picture">Picture</string>
	<string name="description_info">Info</string>
	<string name="request_permission">This sample needs camera permission.</string>
	<string name="camera_error">This device doesn\'t support Camera2 API.</string>
	<string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
</resources>
